/**
* @file:   ./proto/aoyi.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message AOYI{
    /** ID */
    required string id = 1 [default = ""];
    /** 伤害系数 */
    required float factor = 2 [default = 0];
}

message AOYI_ARRAY {
    repeated AOYI items = 1;
}
/**
* @file:   ./proto/arenaprice.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message ARENAPRICE{
    /** 次数 */
    required string id = 1 [default = ""];
    /** 单次消耗钻石 */
    required int32 price = 2 [default = 0];
}

message ARENAPRICE_ARRAY {
    repeated ARENAPRICE items = 1;
}
/**
* @file:   ./proto/bag.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message BAG{
    /** 背包类物品id */
    required string id = 1 [default = ""];
    /** 用途 */
    required int32 useType = 2 [default = 0];
    /** 品质 */
    required int32 quality = 3 [default = 0];
    /** 出售价格 */
    required int32 sellPrice = 4 [default = 0];
    /** 产出 */
    required string exp = 5 [default = ""];
    /** 合成配方 */
    required string needs = 6 [default = ""];
    /** 合成配方对应物品数量 */
    required string needCounts = 7 [default = ""];
    /** 合成需要金币数 */
    required int32 needGolds = 8 [default = 0];
}

message BAG_ARRAY {
    repeated BAG items = 1;
}
/**
* @file:   ./proto/battle.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message BATTLE{
    /** id */
    required string id = 1 [default = ""];
    /** 怪物id */
    required string infos = 2 [default = ""];
    /** 位置 */
    required string positions = 3 [default = ""];
}

message BATTLE_ARRAY {
    repeated BATTLE items = 1;
}
/**
* @file:   ./proto/bossprop.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message BOSSPROP{
    /** ID */
    required string id = 1 [default = ""];
    /** 对应英雄 */
    required string pointId = 2 [default = ""];
    /** 国家 */
    required int32 area = 3 [default = 0];
    /** 职业 */
    required int32 occupation = 4 [default = 0];
    /** 等级 */
    required int32 level = 5 [default = 0];
    /** 生命 */
    required int32 health = 6 [default = 0];
    /** 攻击 */
    required int32 damage = 7 [default = 0];
    /** 护甲 */
    required int32 pdd = 8 [default = 0];
    /** 魔抗 */
    required int32 mdd = 9 [default = 0];
    /** 命中等级 */
    required int32 hitLevel = 10 [default = 0];
    /** 闪避等级 */
    required int32 dodgeLevel = 11 [default = 0];
    /** 暴击等级 */
    required int32 criLevel = 12 [default = 0];
    /** 韧性等级 */
    required int32 tenacityLevel = 13 [default = 0];
    /** 穿透 */
    required int32 pddPierce = 14 [default = 0];
    /** 被动技能 */
    required string passiveSkillId = 15 [default = ""];
    /** 被动技能等级 */
    required string passiveSkillLevel = 16 [default = ""];
    /** 普通攻击伤害范围 X */
    required float range_X = 17 [default = 0];
    /** 普通攻击伤害范围 Y */
    required float range_Y = 18 [default = 0];
    /** 普通攻击伤害范围 Z */
    required float range_Z = 19 [default = 0];
    /** 攻击速度（m/s） */
    required float attackSpeed = 20 [default = 0];
    /** 水平攻击距离（m） */
    required float h_Dis = 21 [default = 0];
    /** 垂直攻击距离（m） */
    required float v_Dis = 22 [default = 0];
    /** 移动速度(m/s) */
    required float moveSpeed = 23 [default = 0];
    /** 星级 */
    required int32 star = 24 [default = 0];
    /** 必杀阶段数 */
    required int32 stage_B = 25 [default = 0];
    /** 必杀每阶段对应hit数 */
    required string hitNum_B = 26 [default = ""];
    /** BOSS的必杀释放时间顺序 */
    required string skillTimeList = 27 [default = ""];
    /** BOSS的必杀预警时间 */
    required string warningTimeList = 28 [default = ""];
    /** 初始强度 */
    required int32 maxIntensity = 29 [default = 0];
    /** 每秒强度恢复（num/s） */
    required int32 recoverIntensityRate = 30 [default = 0];
    /** 硬直临界值（必杀可浮空和击退） */
    required int32 minIntensity = 31 [default = 0];
    /** 攻击类型 */
    required int32 type_Normal = 32 [default = 0];
}

message BOSSPROP_ARRAY {
    repeated BOSSPROP items = 1;
}
/**
* @file:   ./proto/bossskill.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message BOSSSKILL{
    /** ID */
    required string id = 1 [default = ""];
    /** 伤害系数 */
    required float factor = 2 [default = 0];
    /** 击退距离 */
    required float distance = 3 [default = 0];
    /** 浮空高度 */
    required float height = 4 [default = 0];
    /** 伤害范围-X */
    required float range_x = 5 [default = 0];
    /** 伤害范围-Y */
    required float range_y = 6 [default = 0];
    /** 伤害范围-Z */
    required float range_z = 7 [default = 0];
    /** hit时间间隔 */
    required float waitTime = 8 [default = 0];
}

message BOSSSKILL_ARRAY {
    repeated BOSSSKILL items = 1;
}
/**
* @file:   ./proto/buff.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message BUFF{
    /** id */
    required string id = 1 [default = ""];
    /** 类型 */
    required int32 type = 2 [default = 0];
    /** 持续时间 */
    required float duration = 3 [default = 0];
    /** 持续时间的成长值 */
    required float durationGrow = 4 [default = 0];
    /** 每跳时间间隔 */
    required float interval = 5 [default = 0];
    /** 影响的数值 */
    required int32 value = 6 [default = 0];
    /** 影响的数值的成长值 */
    required int32 valueGrow = 7 [default = 0];
    /** 作用类型 */
    required int32 useType = 8 [default = 0];
    /** 依赖关系 */
    required int32 lifeLine = 9 [default = 0];
    /** BUFF类型 */
    required int32 buffType = 10 [default = 0];
    /** 可堆叠上限 */
    required int32 maxLimitCount = 11 [default = 0];
}

message BUFF_ARRAY {
    repeated BUFF items = 1;
}
/**
* @file:   ./proto/chaptermap.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message CHAPTERMAP{
    /** id */
    required string id = 1 [default = ""];
    /** 所属大章 */
    required int32 capterType = 2 [default = 0];
    /** 类型 */
    required int32 pointType = 3 [default = 0];
    /** 开放等级 */
    required int32 openLevel = 4 [default = 0];
}

message CHAPTERMAP_ARRAY {
    repeated CHAPTERMAP items = 1;
}
/**
* @file:   ./proto/coinprice.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message COINPRICE{
    /** 次数 */
    required string id = 1 [default = ""];
    /** 单次消耗钻石 */
    required int32 needGems = 2 [default = 0];
}

message COINPRICE_ARRAY {
    repeated COINPRICE items = 1;
}
/**
* @file:   ./proto/equip.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message EQUIP{
    /** 英雄装备id */
    required string id = 1 [default = ""];
    /** 装备部位 */
    required int32 pos = 2 [default = 0];
    /** 品质 */
    required int32 quality = 3 [default = 0];
    /** 生命 */
    required int32 health = 4 [default = 0];
    /** 生命成长 */
    required int32 healthGrow = 5 [default = 0];
    /** 攻击 */
    required int32 damage = 6 [default = 0];
    /** 攻击成长 */
    required int32 damageGrow = 7 [default = 0];
    /** 护甲 */
    required int32 pdd = 8 [default = 0];
    /** 护甲成长 */
    required int32 pddGrow = 9 [default = 0];
    /** 魔抗 */
    required int32 mdd = 10 [default = 0];
    /** 魔抗成长 */
    required int32 mddGrow = 11 [default = 0];
    /** 命中等级 */
    required int32 hitLevel = 12 [default = 0];
    /** 命中成长 */
    required int32 hitGrow = 13 [default = 0];
    /** 闪避等级 */
    required int32 dodgeLevel = 14 [default = 0];
    /** 闪避成长 */
    required int32 dodgeGrow = 15 [default = 0];
    /** 暴击等级 */
    required int32 criLevel = 16 [default = 0];
    /** 暴击成长 */
    required int32 criGrow = 17 [default = 0];
    /** 韧性等级 */
    required int32 tenacityLevel = 18 [default = 0];
    /** 韧性成长 */
    required int32 tenacityGrow = 19 [default = 0];
    /** 穿透 */
    required int32 pddPierce = 20 [default = 0];
    /** 穿透成长 */
    required int32 pddPierceGrow = 21 [default = 0];
    /** 进化需求材料 */
    required string needs = 22 [default = ""];
    /** 材料数量 */
    required string needCounts = 23 [default = ""];
    /** 进化后英雄装备 */
    required string nextId = 24 [default = ""];
    /** 图标ID */
    required string icon = 25 [default = ""];
}

message EQUIP_ARRAY {
    repeated EQUIP items = 1;
}
/**
* @file:   ./proto/evolutioncoin.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message EVOLUTIONCOIN{
    /** 装备品质 */
    required string id = 1 [default = ""];
    /** 武器 */
    required string equip_Weapon = 2 [default = ""];
    /** 项链 */
    required string equip_Necklace = 3 [default = ""];
    /** 衣服 */
    required string equip_Clothes = 4 [default = ""];
    /** 腰带 */
    required string equip_Belt = 5 [default = ""];
    /** 戒指 */
    required string equip_Ring = 6 [default = ""];
    /** 靴子 */
    required string equip_Boot = 7 [default = ""];
}

message EVOLUTIONCOIN_ARRAY {
    repeated EVOLUTIONCOIN items = 1;
}
/**
* @file:   ./proto/heroprop.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message HEROPROP{
    /** ID */
    required string id = 1 [default = ""];
    /** 国家 */
    required int32 area = 2 [default = 0];
    /** 人物属性 */
    required int32 property = 3 [default = 0];
    /** 职业 */
    required int32 occupation = 4 [default = 0];
    /** 生命 */
    required int32 health = 5 [default = 0];
    /** 生命成长 */
    required string healthGrow = 6 [default = ""];
    /** 攻击 */
    required int32 damage = 7 [default = 0];
    /** 攻击成长 */
    required string damageGrow = 8 [default = ""];
    /** 护甲 */
    required int32 pdd = 9 [default = 0];
    /** 护甲成长 */
    required string pddGrow = 10 [default = ""];
    /** 魔抗 */
    required int32 mdd = 11 [default = 0];
    /** 魔抗成长 */
    required string mddGrow = 12 [default = ""];
    /** 命中等级 */
    required int32 hitLevel = 13 [default = 0];
    /** 命中成长 */
    required string hitGrow = 14 [default = ""];
    /** 闪避等级 */
    required int32 dodgeLevel = 15 [default = 0];
    /** 闪避成长 */
    required string dodgeGrow = 16 [default = ""];
    /** 暴击等级 */
    required int32 criLevel = 17 [default = 0];
    /** 暴击成长 */
    required string criGrow = 18 [default = ""];
    /** 韧性等级 */
    required int32 tenacityLevel = 19 [default = 0];
    /** 韧性成长 */
    required string tenacityGrow = 20 [default = ""];
    /** 穿透 */
    required int32 pddPierce = 21 [default = 0];
    /** 穿透成长 */
    required string pddPierceGrow = 22 [default = ""];
    /** 普通攻击类型 */
    required int32 type_Normal = 23 [default = 0];
    /** 必杀攻击类型 */
    required int32 type_Skill = 24 [default = 0];
    /** 必杀增益百分比 */
    required int32 percent_Skill = 25 [default = 0];
    /** 必杀固定加成 */
    required int32 addNum_Skill = 26 [default = 0];
    /** 必杀固定加成成长 */
    required int32 addNumGrow_Skill = 27 [default = 0];
    /** 奥义攻击类型 */
    required int32 type_AoYi = 28 [default = 0];
    /** 奥义增益百分比 */
    required int32 percent_AoYi = 29 [default = 0];
    /** 奥义固定加成 */
    required int32 addNum_AoYi = 30 [default = 0];
    /** 奥义固定加成成长 */
    required int32 addNumGrow_AoYi = 31 [default = 0];
    /** 被动技能1 */
    required string passiveSkill_1 = 32 [default = ""];
    /** 被动技能2 */
    required string passiveSkill_2 = 33 [default = ""];
    /** 被动技能3 */
    required string passiveSkill_3 = 34 [default = ""];
    /** 普通攻击伤害范围 X */
    required float range_X = 35 [default = 0];
    /** 普通攻击伤害范围 Y */
    required float range_Y = 36 [default = 0];
    /** 普通攻击伤害范围 Z */
    required float range_Z = 37 [default = 0];
    /** 攻击速度（m/s） */
    required float attackSpeed = 38 [default = 0];
    /** 水平攻击距离（m） */
    required float h_Dis = 39 [default = 0];
    /** 垂直攻击距离（m） */
    required float v_Dis = 40 [default = 0];
    /** 移动速度(m/s) */
    required float moveSpeed = 41 [default = 0];
    /** 初始星级 */
    required int32 star = 42 [default = 0];
    /** 必杀阶段数 */
    required int32 stage_B = 43 [default = 0];
    /** 必杀每阶段对应hit数 */
    required string hitNum_B = 44 [default = ""];
    /** 奥义hit数 */
    required int32 hitNum_A = 45 [default = 0];
    /** 位置优先级 */
    required int32 posNum = 46 [default = 0];
    /** 每恢复一必杀点所需要的时间（秒/必杀点） */
    required float recoverTime_Skill = 47 [default = 0];
    /** 奥义需要的小球数量 */
    required int32 aoYiNum = 48 [default = 0];
    /** 武器 */
    required string equip_Weapon = 49 [default = ""];
    /** 项链 */
    required string equip_Necklace = 50 [default = ""];
    /** 衣服 */
    required string equip_Clothes = 51 [default = ""];
    /** 腰带 */
    required string equip_Belt = 52 [default = ""];
    /** 戒指 */
    required string equip_Ring = 53 [default = ""];
    /** 靴子 */
    required string equip_Boot = 54 [default = ""];
    /** 对应碎片id */
    required string needId = 55 [default = ""];
    /** 技能触发概率 */
    required int32 skillTriggerProbability = 56 [default = 0];
    /** 技能触发时间间隔 */
    required float skillTriggerDuration = 57 [default = 0];
}

message HEROPROP_ARRAY {
    repeated HEROPROP items = 1;
}
/**
* @file:   ./proto/heroskill.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message HEROSKILL{
    /** ID */
    required string id = 1 [default = ""];
    /** 伤害系数 */
    required float factor = 2 [default = 0];
    /** 击退距离 */
    required float distance = 3 [default = 0];
    /** 浮空高度 */
    required float height = 4 [default = 0];
    /** 伤害范围-X */
    required float range_x = 5 [default = 0];
    /** 伤害范围-Y */
    required float range_y = 6 [default = 0];
    /** 伤害范围-Z */
    required float range_z = 7 [default = 0];
    /** hit时间间隔 */
    required float waitTime = 8 [default = 0];
    /** 伤害强度 */
    required int32 intensity = 9 [default = 0];
}

message HEROSKILL_ARRAY {
    repeated HEROSKILL items = 1;
}
/**
* @file:   ./proto/herostar.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message HEROSTAR{
    /**  星数 */
    required string id = 1 [default = ""];
    /** 需要碎片 */
    required int32 needNum = 2 [default = 0];
}

message HEROSTAR_ARRAY {
    repeated HEROSTAR items = 1;
}
/**
* @file:   ./proto/monsterprop.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message MONSTERPROP{
    /** ID */
    required string id = 1 [default = ""];
    /** 国家 */
    required int32 area = 2 [default = 0];
    /** 职业 */
    required int32 occupation = 3 [default = 0];
    /** 等级 */
    required int32 level = 4 [default = 0];
    /** 生命 */
    required int32 health = 5 [default = 0];
    /** 攻击 */
    required int32 damage = 6 [default = 0];
    /** 护甲 */
    required int32 pdd = 7 [default = 0];
    /** 魔抗 */
    required int32 mdd = 8 [default = 0];
    /** 命中等级 */
    required int32 hitLevel = 9 [default = 0];
    /** 闪避等级 */
    required int32 dodgeLevel = 10 [default = 0];
    /** 暴击等级 */
    required int32 criLevel = 11 [default = 0];
    /** 韧性等级 */
    required int32 tenacityLevel = 12 [default = 0];
    /** 穿透 */
    required int32 pddPierce = 13 [default = 0];
    /** 普通攻击伤害范围 X */
    required float range_X = 14 [default = 0];
    /** 普通攻击伤害范围 Y */
    required float range_Y = 15 [default = 0];
    /** 普通攻击伤害范围 Z */
    required float range_Z = 16 [default = 0];
    /** 攻击速度（m/s） */
    required float attackSpeed = 17 [default = 0];
    /** 水平攻击距离（m） */
    required float h_Dis = 18 [default = 0];
    /** 垂直攻击距离（m） */
    required float v_Dis = 19 [default = 0];
    /** 移动速度(m/s) */
    required float moveSpeed = 20 [default = 0];
    /** 星级 */
    required int32 star = 21 [default = 0];
    /** 初始强度 */
    required int32 maxIntensity = 22 [default = 0];
    /** 每秒强度恢复（num/s） */
    required int32 recoverIntensityRate = 23 [default = 0];
    /** 硬直临界值（必杀可浮空和击退） */
    required int32 minIntensity = 24 [default = 0];
    /** 攻击类型 */
    required int32 type_Normal = 25 [default = 0];
}

message MONSTERPROP_ARRAY {
    repeated MONSTERPROP items = 1;
}
/**
* @file:   ./proto/passive.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message PASSIVE{
    /** 技能ID */
    required string id = 1 [default = ""];
    /** 触发条件 */
    required int32 triggerEnum = 2 [default = 0];
    /** 触发Id */
    required string triggerId = 3 [default = ""];
    /** buff的id */
    required string buffId = 4 [default = ""];
    /** 作用的目标阵营 */
    required int32 target_Team = 5 [default = 0];
    /** 作用的目标势力 */
    required int32 target_State = 6 [default = 0];
    /** 作用的目标职业 */
    required int32 target_Occupation = 7 [default = 0];
}

message PASSIVE_ARRAY {
    repeated PASSIVE items = 1;
}
/**
* @file:   ./proto/prizeshow.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message PRIZESHOW{
    /** ID */
    required string id = 1 [default = ""];
    /** 类型 */
    required string type = 2 [default = ""];
    /** 物品数量 */
    required string counts = 3 [default = ""];
    /** 物品ID */
    required string awards = 4 [default = ""];
}

message PRIZESHOW_ARRAY {
    repeated PRIZESHOW items = 1;
}
/**
* @file:   ./proto/qualityrule.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message QUALITYRULE{
    /** ID */
    required string id = 1 [default = ""];
    /** 等级要求 */
    required int32 needLevel = 2 [default = 0];
    /** 金币 */
    required int32 needGolds = 3 [default = 0];
    /** 增加生命 */
    required int32 health = 4 [default = 0];
    /** 增加攻击 */
    required int32 damage = 5 [default = 0];
    /** 增加护甲 */
    required int32 pdd = 6 [default = 0];
    /** 增加魔抗 */
    required int32 mdd = 7 [default = 0];
    /** 增加命中 */
    required int32 hitLevel = 8 [default = 0];
    /** 增加闪避 */
    required int32 dodgeLevel = 9 [default = 0];
    /** 增加暴击 */
    required int32 criLevel = 10 [default = 0];
    /** 增加韧性 */
    required int32 tenacityLevel = 11 [default = 0];
    /** 增加穿透 */
    required int32 pddPierce = 12 [default = 0];
    /** 开放功能 */
    required int32 open = 13 [default = 0];
}

message QUALITYRULE_ARRAY {
    repeated QUALITYRULE items = 1;
}
/**
* @file:   ./proto/realtimecheck.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message REALTIMECHECK{
    /** id */
    required string id = 1 [default = ""];
    /** 基本型 */
    required int32 type = 2 [default = 0];
    /** 触发数值 */
    required int32 num = 3 [default = 0];
}

message REALTIMECHECK_ARRAY {
    repeated REALTIMECHECK items = 1;
}
/**
* @file:   ./proto/resetprice.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message RESETPRICE{
    /** 次数 */
    required string id = 1 [default = ""];
    /** 单次消耗钻石 */
    required int32 needGems = 2 [default = 0];
}

message RESETPRICE_ARRAY {
    repeated RESETPRICE items = 1;
}
/**
* @file:   ./proto/rule.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message RULE{
    /** 等级 */
    required string id = 1 [default = ""];
    /** 玩家升下级需要经验值 */
    required int32 upgrade_Exp_User = 2 [default = 0];
    /** 英雄升下级需要经验值 */
    required int32 upgrade_Exp_Hero = 3 [default = 0];
    /** 命中折算 */
    required int32 factor_Hit = 4 [default = 0];
    /** 闪避折算 */
    required int32 factor_Dodge = 5 [default = 0];
    /** 暴击折算 */
    required int32 factor_Cri = 6 [default = 0];
    /** 韧性折算 */
    required int32 factor_Tenacity = 7 [default = 0];
    /** 必杀升级金币 */
    required int32 upgrade_Gold_Skill = 8 [default = 0];
    /** 奥义升级金币 */
    required int32 upgrade_Gold_AoYi = 9 [default = 0];
    /** 被动1升级金币 */
    required int32 upgrade_Gold_Passive_1 = 10 [default = 0];
    /** 被动2升级金币 */
    required int32 upgrade_Gold_Passive_2 = 11 [default = 0];
    /** 被动3金币 */
    required int32 upgrade_Gold_Passive_3 = 12 [default = 0];
    /** 武器升级金币 */
    required int32 upgrade_Gold_Weapon = 13 [default = 0];
    /** 项链升级金币 */
    required int32 upgrade_Gold_Necklace = 14 [default = 0];
    /** 衣服升级金币 */
    required int32 upgrade_Gold_Clothes = 15 [default = 0];
    /** 腰带升级金币 */
    required int32 upgrade_Gold_Belt = 16 [default = 0];
    /** 戒指升级金币 */
    required int32 upgrade_Gold_Ring = 17 [default = 0];
    /** 靴子升级金币 */
    required int32 upgrade_Gold_Boot = 18 [default = 0];
}

message RULE_ARRAY {
    repeated RULE items = 1;
}
/**
* @file:   ./proto/shopresetprice.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message SHOPRESETPRICE{
    /** 次数 */
    required string id = 1 [default = ""];
    /** 单次消耗钻石 */
    required int32 needGems = 2 [default = 0];
}

message SHOPRESETPRICE_ARRAY {
    repeated SHOPRESETPRICE items = 1;
}
/**
* @file:   ./proto/spprice.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message SPPRICE{
    /** 次数 */
    required string id = 1 [default = ""];
    /** 单次消耗钻石 */
    required int32 needGems = 2 [default = 0];
}

message SPPRICE_ARRAY {
    repeated SPPRICE items = 1;
}
/**
* @file:   ./proto/staprice.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message STAPRICE{
    /** 次数 */
    required string id = 1 [default = ""];
    /** 单次消耗钻石 */
    required int32 needGems = 2 [default = 0];
}

message STAPRICE_ARRAY {
    repeated STAPRICE items = 1;
}
/**
* @file:   ./proto/subtask.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message SUBTASK{
    /** id */
    required string id = 1 [default = ""];
    /** 战斗数据ID */
    required string battleData = 2 [default = ""];
    /** 对应的每场战斗难度系数 */
    required string diffs = 3 [default = ""];
    /** 对应的每场战斗时间限制（秒） */
    required string totalTimes = 4 [default = ""];
    /** 中文任务名称 */
    required string name_ch = 5 [default = ""];
    /** 消耗体力 */
    required int32 expendSt = 6 [default = 0];
    /** 总挑战次数 */
    required int32 fightCount = 7 [default = 0];
    /** 账号获得经验 */
    required int32 idExp = 8 [default = 0];
    /** 英雄获得经验 */
    required int32 heroExp = 9 [default = 0];
    /** 获得金币 */
    required int32 dropGold = 10 [default = 0];
    /** 所属系列任务 --> */
    required string pointParentId = 11 [default = ""];
    /** 优先级 */
    required float priority = 12 [default = 0];
    /** 参考战力 */
    required int32 fightPower = 13 [default = 0];
}

message SUBTASK_ARRAY {
    repeated SUBTASK items = 1;
}
/**
* @file:   ./proto/task.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message TASK{
    /** id */
    required string id = 1 [default = ""];
    /** 类型 */
    required int32 seriesType = 2 [default = 0];
    /** 中文任务名 */
    required string seriesName_ch = 3 [default = ""];
    /** 奖励ID */
    required string rewardId = 4 [default = ""];
    /** 任务开放时间类型 */
    required int32 openTimeType = 5 [default = 0];
    /** 任务开放时间 */
    required string openTime = 6 [default = ""];
    /** 每日进入总次数 */
    required int32 totalEnterNum = 7 [default = 0];
    /** 限制条件 */
    required string enterLimit = 8 [default = ""];
    /** 所属城市 --> */
    required string pointParentId = 9 [default = ""];
    /** 完成后开启据点id */
    required string nextPoint = 10 [default = ""];
    /** 优先级 */
    required float priority = 11 [default = 0];
}

message TASK_ARRAY {
    repeated TASK items = 1;
}
/**
* @file:   ./proto/triggerattack.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message TRIGGERATTACK{
    /** id */
    required string id = 1 [default = ""];
    /** 触发条件 */
    required int32 type = 2 [default = 0];
    /** 冷却CD */
    required float cd = 3 [default = 0];
}

message TRIGGERATTACK_ARRAY {
    repeated TRIGGERATTACK items = 1;
}
/**
* @file:   ./proto/triggerstartcondition.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message TRIGGERSTARTCONDITION{
    /** id */
    required string id = 1 [default = ""];
    /** 时机 */
    required int32 trigger_Time = 2 [default = 0];
    /** 阵营 */
    required int32 trigger_Team = 3 [default = 0];
    /** 势力 */
    required int32 trigger_State = 4 [default = 0];
    /** 职业 */
    required int32 trigger_Occupation = 5 [default = 0];
    /** 比较符号 */
    required int32 trigger_Mark = 6 [default = 0];
    /** 人数 */
    required int32 trigger_Count = 7 [default = 0];
}

message TRIGGERSTARTCONDITION_ARRAY {
    repeated TRIGGERSTARTCONDITION items = 1;
}
/**
* @file:   ./proto/vip.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message VIP{
    /** VIP */
    required string id = 1 [default = ""];
    /** 达到需要累计充值金额 */
    required int32 needRMB = 2 [default = 0];
    /** 送扫荡券数量 */
    required int32 freeItemCount = 3 [default = 0];
    /** 可购买体力次数 */
    required int32 buyPowerCount = 4 [default = 0];
    /** 重置自由任务副本次数 */
    required int32 buyFBCount = 5 [default = 0];
    /** 控制购买竞技场挑战次数 */
    required int32 buyArenaCount = 6 [default = 0];
    /** 控制可点金次数 */
    required int32 buyGoldsCount = 7 [default = 0];
    /** 技能点上限 */
    required int32 maxSkillPoint = 8 [default = 0];
    /** 每日经验活动副本次数 */
    required int32 expBattleNum = 9 [default = 0];
    /** 每日金币活动副本次数 */
    required int32 goldBattleNum = 10 [default = 0];
    /** 每日爬塔次数 */
    required int32 towerNum = 11 [default = 0];
    /** 每日远征次数 */
    required int32 crusadeNum = 12 [default = 0];
    /** 购买技能点次数上限 */
    required int32 buySkillPoint = 13 [default = 0];
}

message VIP_ARRAY {
    repeated VIP items = 1;
}
/**
* @file:   ./proto/vipfunction.proto
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/


message VIPFUNCTION{
    /** 功能 */
    required string id = 1 [default = ""];
    /** 开启VIP */
    required int32 openVip = 2 [default = 0];
}

message VIPFUNCTION_ARRAY {
    repeated VIPFUNCTION items = 1;
}
